2003-05-09 Gustavo Niemeyer <niemeyer@conectiva.com>
	* modules/userdata.py,modules/permission.py: A much better userdata
	  registry and permission system was developed.
	* misc.py: Increased maximum line size to 400 characters.

2003-05-08 Gustavo Niemeyer <niemeyer@conectiva.com>
	* modules/xmlrpc.py: New xmlrpc module.
	* modules/testadora.py: New testadora module, supporting
	  compile time command, for now. This is useful for Conectiva
	  only.
	* modules/permission.py: Accept "(remove|delete|del) permission"
	  as well.
	* sqlitedb.py,__init__.py: Implemented sqlite db storage.
	* modules/log.py: Use sqlite storage to maintain logs.
	* modules/modulecontrol.py: Adopted re system, and added a command
	  to show loaded modules.
	* modules/{freshmeat.py,plock.py}: Get static configuration from
	  config file.

2002-06-19 Gustavo Niemeyer <niemeyer@conectiva.com>
	* scripts/pybotsetup.py: Adopted new admin permission working.
	* modules/log.py: Created logging facilities.
	* modules/permission.py: Improved permission handling a lot,
	  included help system, and changed admin permission system.

2002-04-03 Gustavo Niemeyer <niemeyer@conectiva.com>
	* scripts/pybot.py: Fixed.
	* modules/freshmeat.py: Fixed little bug in regular expression and
	  implemented help system.
	* modules/messages.py: unregister_help() must have a defret
	  parameter.
	* modules/freshmeat.py: Removed since AppWatch is dead.

2001-12-03 Gustavo Niemeyer <niemeyer@conectiva.com>
	* pybot.py, pybot/runner.py: New files with new startup system.
	* run, scripts/pybot.py: Removed.
	* *.py: Converted tabs to spaces so people using other editors
	  feel confortable as well (suggested by John Thingstad).

2001-11-14 Gustavo Niemeyer <niemeyer@conectiva.com>
	* modules/messages.py: Added help.
	* modules/help.py: Reduced load level.
	* module.py, modules/modulecontrol.py: Added handling of load levels,
	  allowing one to control module loading order.
