@@ -17,11 +17,14 @@
 ; on-the-fly, by giving the "admin" permission through the permission
 ; system (send "help permission" to pybot for more information), or just
 ; append an entry here and restart pybot.
-admins = niemeyer@i.conectiva.com.br
+admins = niemeyer@irc.conectiva.com.br
 
 [userdata]
 ; 30min
 login_timeout = 1800
+
+[options]
+path = %(datadir)s/options
 
 [infopack]
 infopackdir = %(datadir)s/infopacks
